# topic-modeling-with-llms

./: .gitignore  .python-version  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/dataset/: ecommerce_reviews.yaml  gov_comments.yaml
configs/experiment/: baseline_bertopic.yaml  baseline_fastopic.yaml  tune_bertopic.yaml  tune_fastopic.yaml
configs/llm/: summarizer_default.yaml  tags_default.yaml
configs/runtime/: gcp.yaml
content/: index.md
docs/: ARCHITECTURE.md  BLOG_CHECKLIST.md  EXPERIMENTS.md  INSTRUCTIONS.md
notebooks/: README.md
scripts/: run_pipeline.py
src/topic_modeling/: __init__.py
src/topic_modeling/analysis/: __init__.py  associations.py  hierarchy.py  stats.py  trends.py
src/topic_modeling/config/: loader.py  schema.py
src/topic_modeling/data/: loader.py  schema.py
src/topic_modeling/evaluation/: metrics.py
src/topic_modeling/llm/: client.py  reliability.py  summarizer.py  tagger.py
src/topic_modeling/models/: __init__.py  base.py  bertopic_adapter.py  fastopic_adapter.py
src/topic_modeling/pipelines/: pipeline.py
src/topic_modeling/preprocessing/: cleaner.py
src/topic_modeling/reporting/: figures.py  reporter.py
src/topic_modeling/tuning/: scoring.py  tuner.py
src/topic_modeling/utils/: artifacts.py  logging_utils.py  seeds.py
tests/: conftest.py  test_analysis_associations.py  test_analysis_hierarchy.py  test_analysis_stats.py  test_analysis_trends.py  test_artifacts.py  test_config.py  test_evaluation.py  test_llm.py  test_llm_reliability.py  test_models.py  test_pipeline.py  test_preprocessing.py
(+2 files in other folders)
